--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.2",
@@ -29,6 +30,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
